Fix test centre update overflow

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -827,8 +827,7 @@ $navbar-item-color: white
 
 .test-centre-post-date
   width: 100%
-  text-align: end
-  align-self: 
+  text-align: right
 
 .test-post-container
   margin-bottom: 100px !important
